--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -7,6 +7,7 @@ on:
     # Include
       - "backend/**"
       - "frontend/**"
+      - ".github/workflows/ci-pipeline.yaml"
 
     # Exclude
       - "!**.md"
@@ -35,6 +36,9 @@ jobs:
       - name: Lowercase Repository name
         run: echo "RPN=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Docker Login
         uses: docker/login-action@v3
         with:
@@ -42,12 +46,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Push ${{ matrix.service }}
+      - name: Build and Push ${{ matrix.services }}
         uses: docker/build-push-action@v6
         with:
-          context: ./{{ matrix.service }}
+          context: ./${{ matrix.services }}
           push: true
-          tags: ghcr.io/{{ env.RPN }}/{{ matrix.service }}:latest
-
+          tags: ghcr.io/${{ env.RPN }}/${{ matrix.services }}:latest
           cache-from: type=gha
-          cache-to: type=gha, mode=min
+          cache-to: type=gha,mode=min
